--- a/src/components/Precip/Precip.css
+++ b/src/components/Precip/Precip.css
@@ -11,8 +11,17 @@
   display: flex;
   justify-content: space-around;
 
-  height: 5vh;
   min-width: 100%;
+}
+@media screen and (orientation: landscape) {
+  .precip-chart {
+    height: 5vh;
+  }
+}
+@media screen and (orientation: portrait) {
+  .precip-chart {
+    height: 5vw;
+  }
 }
 
 .pop {
