Add ability to refresh

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,6 +16,10 @@ body {
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 }
 
+.all:hover {
+  cursor: pointer;
+}
+
 
 @media screen and (orientation: landscape) {
   p {
