--- a/src/components/Tomorrow/Tomorrow.css
+++ b/src/components/Tomorrow/Tomorrow.css
@@ -1,8 +1,22 @@
 .Tomorrow {
   grid-area: 3 / 3 / span 1 / span 1;
-  
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.tomorrow-condition {
+  min-width: 100%;
+}
+@media screen and (orientation: landscape) {
+  .tomorrow-condition {
+    height: 5vh;
+  }
+}
+@media screen and (orientation: portrait) {
+  .tomorrow-condition {
+    height: 7vw;
+  }
 }
